<resources>
    <string name="app_name">Consultancy</string>
    <string name="user_name">User name</string>
    <string name="enter_your_email">enter your email</string>
    <string name="password">Enter password</string>
    <string name="Forgotten_Password">Forgotten Password</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="NO_ACCOUNT_YET_SIGNUP_NOW">NO ACCOUNT YET? SIGNUP NOW</string>
    <string name="first_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Email_address">Email address</string>
    <string name="Password">Password</string>
    <string name="confirmation_Password">Confirmation Password</string>
    <string name="SIGN_UP">SIGN UP</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="others">Others</string>
    <string name="Android">Android</string>
    <string name="recover_your_username">Recover your username</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="reset_password">Reset Password</string>
    <string name="consultancy">Consultancy</string>
    <string name="show_password">Show Password</string>
    <string name="enter_your_firstname">Enter your firstname</string>
    <string name="enter_your_lastname">Enter your lastname</string>
    <string name="enter_your_phonenumber">Enter your phonenumber</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_confirmation_password">Enter your confirmation password</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Preeti Bavalva</string>
    <string name="nav_header_subtitle">patel98preeti@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edt_address">address</string>
    <string name="full_name">full name</string>
    <string name="edt_email">edit email</string>
    <string name="edt_phone">edit phone</string>
    <string name="profile_details">PROFILE DETAILS</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phoneno">Phoneno</string>

</resources>
