<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/preeti"
    android:gravity="center">


    <TextView
        android:id="@+id/txt_consultancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/consultancy"
        android:textColor="@color/Black"
        android:textSize="@dimen/Min_margine" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/user_name"
        android:textColor="@color/Black"
        android:textSize="@dimen/Fab_margine" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_email"
        android:hint="@string/enter_your_email" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_email"
        android:text="@string/password"
        android:textColor="@color/Black"
        android:textSize="@dimen/Fab_margine" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_password"
        android:hint="@string/password" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/text_Chekbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:layout_below="@+id/edt_password"
        android:textColor="@color/Black"/>

    <TextView
        android:id="@+id/text_forgottenpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edt_password"
        android:text="@string/Forgotten_Password"
        android:textColor="@color/Black" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_forgottenpassword"
        android:layout_centerHorizontal="true"
        android:text="@string/SIGN_IN"
        android:textColor="@color/Black"
        android:textSize="@dimen/Fab_margine" />

    <TextView

        android:id="@+id/txt_createaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_signin"
        android:layout_centerHorizontal="true"
        android:text="@string/NO_ACCOUNT_YET_SIGNUP_NOW"
        android:textColor="@color/Black"
        android:textSize="@dimen/Fab_margine" />

</RelativeLayout>