<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/preeti"
    android:gravity="center">

    <TextView
        android:id="@+id/txt_recoveryourusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/recover_your_username"
        android:textColor="@color/Black"
        android:textSize="@dimen/Min_margine" />

    <EditText
        android:id="@+id/edt_emailorphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_recoveryourusername"
        android:hint="@string/email_or_phone" />

    <Button
        android:id="@+id/btn_resetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_emailorphone"
        android:layout_centerInParent="true"
        android:text="@string/reset_password"
        android:textColor="@color/Black"
        android:textSize="@dimen/Fab_margine" />

    </RelativeLayout>
</FrameLayout>